# email-spoof-detector

./: .gitignore  Cargo.toml  Dockerfile  README.md
spoof-tester/: Cargo.toml  spoof.eml
spoof-tester/src/: main.rs
src/: dns.rs  domain_verdict.rs  email_verdict.rs  lib.rs  parse.rs
